# sohtec

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: example.py
sohtec/: __init__.py  sohtec.py
sohtec/layers/: __init__.py  attention.py  embedding.py  transformer.py
