[project]
name = "sohtec"
version = "0.1.0"
description = "SOH-TEC: Transformer for EV battery SOH estimation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = { include = ["sohtec*"] } }
